# heurist-agent-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  decorators.py  farcaster_reply_history.json  main.py  main_api.py  main_console.py  main_discord.py  main_farcaster.py  main_farcaster_reply.py  main_mcp.py  main_research.py  main_telegram.py  main_twitter.py  main_twitter_reply.py  mesh_api.py  mesh_manager.py  pyproject.toml  requirements.txt  test_twitter_monitor.py  test_twitter_reply_agent.py
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.md  base_agent.py  core_agent.py  core_agent_refactor.py  discord_agent.py  reply_agent.py  research_agent.py  telegram_agent.py  tool_box.py  tool_decorator.py  tool_decorator_example.py  tools.py  tools_mcp.py  twitter_agent.py
api-client/: README.md  pyproject.toml
clients/: base_client.py  defillama_client.py  firecrawl_client.py  merkl_client.py  mesh_client.py  twitter_api.py
config/: prompts.yaml
core/: .env.example  README.md  __init__.py  config.py  custom_smolagents.py  embedding.py  imgen.py  llm.py  pyproject.toml  requirements.txt  setup.py  videogen.py  voice.py
core/clients/: __init__.py  mcp_client.py  search_client.py
core/clients/search/: __init__.py  base_search_client.py  exa_client.py  firecrawl_client.py
core/components/: __init__.py  conversation_manager.py  knowledge_provider.py  llm_provider.py  media_handler.py  personality_provider.py  validation_manager.py
core/examples/: basic_calls.py
core/heurist_image/: ImageGen.py  test_image_gen.py
core/tools/: __init__.py  tools.py  tools_mcp.py
core/utils/: __init__.py  text_splitter.py
core/workflows/: __init__.py  augmented_llm.py  chain_of_thought.py  deep_research.py
examples/: chat.py  test_twitter_monitor.py  test_videogen.py
heurist-mesh-client/: README.md  pyproject.toml
interfaces/: api.py  discord.py  farcaster_agent.py  farcaster_post.py  farcaster_reply.py  reply_agent.py  reply_farcaster.py  telegram.py  twitter_post.py  twitter_reply.py
mesh/: README.md  aave_agent.py  aave_defi_agent.py  aave_reserve_agent.py  allora_price_prediction_agent.py  bitquery_sol_token_info_agent.py  bitquery_solana_token_info_agent.py  carv_onchain_data_agent.py  coingecko_token_info_agent.py  coinsider_arbitrage_agent.py  (+25 more)
(+84 files in other folders)
