[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heurist-core"
version = "0.1.0"
description = "Core components of the Heurist Agent Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Heurist", email = "info@heurist.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.40.8",
    "requests>=2.31.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.3.2",
    "psycopg2-binary>=2.9.9",
    "smolagents>=1.9.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.5.0"
]

[project.urls]
"Homepage" = "https://github.com/heurist-ai/heuman-agent-framework"
"Bug Tracker" = "https://github.com/heurist-ai/heuman-agent-framework/issues"
